--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "scripts": {
     "dev": "vite --config vite.config.mts",
     "build": "vite build --config vite.config.mts",
-    "preview": "vite preview --config vite.config.mts"
+    "preview": "vite preview --config vite.config.mts",
+    "postinstall": "node ./scripts/fix-ts-lsp-client.cjs"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^5.2.0",
-    "vite-plugin-fable": "^0.0.31"
-  },
-  "overrides": {
-    "ts-lsp-client": "1.0.4"
+    "vite": "^7.2.0",
+    "vite-plugin-fable": "^0.2.0"
   }
 }
