fix: Forward API calls and enable CORS for dev server

--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -4,6 +4,7 @@
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <DisableImplicitFSharpCoreReference>true</DisableImplicitFSharpCoreReference>
+    <UseAppHost>false</UseAppHost>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Program.fs" />
