--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -16,6 +16,7 @@
     <PackageReference Include="FSharp.Core" Version="9.0.303" />
     <PackageReference Include="Giraffe" Version="6.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\\Shared\\Shared.fsproj" />
