--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="Model.fs" />
     <Compile Include="Api.fs" />
+    <Compile Include="GameLoop.fs" />
     <Compile Include="Update.fs" />
     <Compile Include="View.fs" />
     <Compile Include="App.fs" />
