--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "mocha": "^11.1.0",
+    "source-map-support": "^0.5.21",
     "vite": "^7.2.0",
     "vite-plugin-fable": "^0.2.0"
   }
