--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -9,14 +9,16 @@
   <ItemGroup>
     <Compile Include="Services.fs" />
     <Compile Include="HttpHandlers.fs" />
-    <Compile Include="Swagger.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="9.0.303" />
-    <PackageReference Include="Giraffe" Version="6.2.0" />
+    <PackageReference Include="Giraffe" Version="8.0.0-alpha-003" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
+    <PackageReference Include="Giraffe.OpenApi" Version="0.0.2" />
+    <PackageReference Include="FSharp.SystemTextJson" Version="1.3.13" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\\Shared\\Shared.fsproj" />
