--- a/tests/Server.Tests/Server.Tests.fsproj
+++ b/tests/Server.Tests/Server.Tests.fsproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Include="HandlersTests.fs" />
+    <Compile Include="PostgresRepositoryTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -19,7 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Giraffe" Version="6.2.0" />
+    <PackageReference Include="Giraffe" Version="8.0.0-alpha-003" />
+    <PackageReference Include="Testcontainers.PostgreSql" Version="3.8.0" />
   </ItemGroup>
 
   <ItemGroup>
