--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "test:client:fable": "dotnet fable tests/Client.FableTests/Client.FableTests.fsproj --run \"npx mocha tests/Client.FableTests/Tests.fs.js\""
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "^0.82.1",
-    "react-native-web": "^0.19.13"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.72.7"
   },
   "devDependencies": {
     "mocha": "^11.1.0",
