--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -23,4 +23,10 @@
   <ItemGroup>
     <ProjectReference Include="..\\Shared\\Shared.fsproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </None>
+  </ItemGroup>
 </Project>
