--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Fable.React" Version="9.3.0" />
     <PackageReference Include="Fable.Browser.Dom" Version="2.14.0" />
     <PackageReference Include="Fable.Promise" Version="3.1.0" />
+    <PackageReference Include="FsSonarRunnerCore" Version="3.2.391" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\\Shared\\Shared.fsproj" />
