--- a/src/Shared/Shared.fsproj
+++ b/src/Shared/Shared.fsproj
@@ -11,5 +11,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="9.0.303" />
+    <PackageReference Include="FsSonarRunnerCore" Version="3.2.391" />
   </ItemGroup>
 </Project>
